--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "typescript": "5.3.3"
     },
     "dependencies": {
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "zod": "^3.22.4"
     }
 }
